--- a/css/site.css
+++ b/css/site.css
@@ -1,20 +1,32 @@
 
+body {
+  background-color: #b0f7ef;
+  font-family: "Lucida Handwriting", cursive;
+}
 
-#bio {
-  color: #33bb99;
+h1, h2, h3 {
+  color: #4e42f5;
+  font-family: Monaco, monospace;
   font-weight: bold;
 }
 
-#pic {
-  width:200px;
-  height:200px;
-  object-fit:cover;
-  border-radius:50%;
-  float: right;
+.bio {
+  color: #33bb99;
+  font-weight: bold;
+  background-color: #f7ebb0;
+  padding: 20px;
+  border: solid 1px;
+  margin: 10px;
 }
 
-#labsection {
-  background-color: tan;
+#pic {
+  object-fit:cover;
+  float: right;
+  border-radius:50%;
+}
+
+.labsection {
+  background-color: #f7ebb0;
   padding: 20px;
   border: solid 1px;
   margin: 10px;
