--- a/lab8/css/lab.css
+++ b/lab8/css/lab.css
@@ -1,26 +1,29 @@
-
 body {
-  background-color: #b0f7ef;
-  font-family: "Lucida Handwriting", cursive;
+  background-color: #381D2A ;
   border: solid; 2px; white-space: normal;
   padding: 10px;
 }
 
+
 h1, h2, h3 {
-  color: #4e42f5;
-  font-family: Monaco, monospace;
-  font-weight: bold;
+  color: #ebdcfc;
+  font-family: monospace;
 }
+
 
 p {
   font-family: monospace;
   font-size: 100%;
   text-indent: 20px;
   margin: auto;
-  color: black;
+  color: white;
   padding: 10px;
 }
 
 .output {
+  color: white;
+}
+
+#output {
   color: white;
 }
